--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -11,7 +11,7 @@ title = "Mosso Café"
 unsafe = true
 [[menu.company]]
 URL = "about-us"
-name = "About Us"
+name = "Nosotros"
 [[menu.company]]
 URL = "quick-start"
 name = "Quick Start"
@@ -47,7 +47,7 @@ author = "Uxi Software"
 contact_form_action = "#"
 description = "Cafetería con estílo, en Oaxaca. Ejido Guadalupe Victoria "
 footer = []
-logo = "images/logo.png"
+logo = "images/logo.jpg"
 logo_width = "200px"
 [params.company]
 address = "Guadalupe Victoria #122, Ejido Guadalupe Victoria"
@@ -77,10 +77,10 @@ link = "plugins/slick/slick.min.js"
 enable = false
 preloader = ""
 [[params.social]]
-icon = "ti-twitter-alt"
-link = "https://twitter.com/cristianmarint"
-title = "twitter"
+icon = "ti-facebook"
+link = "https://facebook.com/mossocafe"
+title = "facebook"
 [[params.social]]
-icon = "instagram"
-link = "instagram.com/mossocafe/"
+icon = "ti-instagram"
+link = "https://instagram.com/mossocafe"
 title = "Instagram"
