--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -94,5 +94,5 @@ link = "https://twitter.com/cristianmarint"
 title = "twitter"
 [[params.social]]
 icon = "instagram"
-link = "instagram.com/mossocafe/"
+link = "https://instagram.com/mossocafe/"
 title = "Instagram"
