--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -91,7 +91,7 @@ title = ""
 [[params.social]]
 icon = "ti-twitter-alt"
 link = "https://twitter.com/cristianmarint"
-title = "twitter"
+title = "Twitter"
 [[params.social]]
 icon = "instagram"
 link = "https://instagram.com/mossocafe/"
